Convert most MKNpc serialized objects to Codecs